<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, ibis2!</string>
    <string name="app_name">IBIS Droid</string>
    <string name="logo_description">gcWorld Modifications Logo</string>
        <string name="about">About</string>
    <string name="connect">Connect</string>
    <string name="cashdesk">Cashdesk</string>
    <string name="ticketprinter">Ticketprinter</string>
    <string name="no_wifi">Please activate WIFI connection</string>
    <string name="yes">Enable</string>
    <string name="no">Cancel</string>
    <string name="ok">OK</string>
    <string name="connection_failed">The connection to the server failed</string>
    
        <string name="ip_address">IP address</string>
    <string name="ip_of_pc">IP address of PC running OMSI</string>
    <string name="settings">Settings</string>
    <string name="omsi_settings">OMSI Settings</string>
    <string name="choose_map">Choose Map</string>
    <string name="map">Map</string>
    <string name="choose_currency">Choose Currency</string>
    <string name="currency">Currency</string>
</resources>
