<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
  <PreferenceCategory
            android:title="@string/settings">

		<EditTextPreference
				android:title="@string/ip_address"
				android:summary="@string/ip_of_pc" android:key="ip" android:enabled="true"/>
    </PreferenceCategory>
   <PreferenceCategory android:title="@string/omsi_settings">
       <ListPreference android:dialogTitle="@string/choose_map" android:title="@string/map" android:key="karten" android:entries="@array/Karten" android:entryValues="@array/KartenValues"/>
     <ListPreference android:dialogTitle="@string/choose_currency" android:title="@string/currency" android:key="money" android:entries="@array/Money" android:entryValues="@array/MoneyValues"/>
       
       
   </PreferenceCategory>
</PreferenceScreen>
