<menu xmlns:android="http://schemas.android.com/apk/res/android">
        <item android:id="@+id/connect" android:title="@string/connect" android:orderInCategory="1" android:showAsAction="always" android:visible="true"></item><item android:showAsAction="ifRoom" android:visible="true" android:title="@string/settings" android:id="@+id/settings" android:orderInCategory="2"></item>
        <item android:id="@+id/cashdesk" android:title="@string/cashdesk" android:orderInCategory="3" android:showAsAction="always"></item><item android:id="@+id/ticketprinter" android:title="@string/ticketprinter" android:orderInCategory="3" android:showAsAction="always"></item><item android:id="@+id/close" android:showAsAction="never" android:title="Beenden" android:orderInCategory="10"></item>
        <item android:id="@+id/about" android:orderInCategory="9" android:title="@string/about" android:showAsAction="never"></item>
        
        
    </menu>
